# WAFFEN-SLOVER

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/waffen_solver/: __init__.py  __main__.py
src/waffen_solver/codebase/: __init__.py  architecture_analyzer.py  parser.py  pattern_detector.py  scanner.py
src/waffen_solver/config/: __init__.py  prompts.py  settings.py
src/waffen_solver/core/: __init__.py  analyzer.py  context_manager.py  engine.py  explainer.py  solver.py
src/waffen_solver/exceptions/: __init__.py  analysis_exceptions.py  base.py  git_exceptions.py  llm_exceptions.py
src/waffen_solver/git/: __init__.py  blame_tracker.py  diff_analyzer.py  history_analyzer.py  repository.py
src/waffen_solver/language/: __init__.py  bilingual_handler.py  detector.py  translator.py
src/waffen_solver/llm/: __init__.py  chain_factory.py  prompt_builder.py  provider.py  response_parser.py
src/waffen_solver/models/: __init__.py  analysis_result.py  context.py  error.py  git_info.py  solution.py
src/waffen_solver/ui/: __init__.py  cli.py  formatter.py  renderer.py
src/waffen_solver/utils/: __init__.py  file_handler.py  logger.py  validator.py
tests/: __init__.py  conftest.py
tests/fixtures/: sample_errors.py
tests/unit/: test_config.py  test_exceptions.py  test_language.py  test_models.py
