[tool.poetry]
name = "waffen-solver"
version = "1.0.0"
description = "Enterprise-grade AI debugging assistant with bilingual support"
authors = ["Waffen-Solver Team"]
readme = "README.md"
repository = "https://github.com/BLACK0X80/WAFFEN-SLOVER"
packages = [{include = "waffen_solver", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.1.0"
langchain-anthropic = "^0.1.0"
anthropic = "^0.18.0"
gitpython = "^3.1.0"
rich = "^13.0.0"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"
typer = "^0.9.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
pytest-asyncio = "^0.21.0"
black = "^23.0.0"
pylint = "^3.0.0"
mypy = "^1.0.0"
pre-commit = "^3.0.0"

[tool.poetry.scripts]
waffen-solver = "waffen_solver.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.pylint.messages_control]
disable = ["missing-module-docstring", "too-few-public-methods"]

[tool.pylint.format]
max-line-length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
